# SmartFulfillmentOptimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
app/: config.py  deps.py  logging.py  main.py
app/pipelines/: build_features.py  refresh_assignments.py  train_forecast.py
app/routers/: forecast.py  orders.py  plan.py
app/schemas/: forecast_schemas.py  order_schemas.py  plan_schemas.py
app/services/: assignment_service.py  forecasting_service.py  optimization_service.py
app/utils/: costs.py  eval.py  geo.py
data/raw/: inventory.csv  synthetic_orders.csv  warehouses.csv
data/schemas/: inventory.schema.json  orders.schema.json  warehouses.schema.json
notebooks/: 01_explore_orders.ipynb  02_demand_forecast_eval.ipynb
scripts/: backfill_metrics.py  generate_synthetic_data.py
