[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict_optional = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
